crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_citation_code_span_link.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..232
  PARAGRAPH@0..65
    LINK@0..64
      LINK_START@0..1
        LINK_START@0..1 "["
      LINK_TEXT@1..17
        INLINE_CODE@1..17
          INLINE_CODE_MARKER@1..2 "`"
          INLINE_CODE_CONTENT@2..16 "@jolars/eunoia"
          INLINE_CODE_MARKER@16..17 "`"
      LINK_TEXT_END@17..18 "]"
      LINK_DEST_START@18..19 "("
      LINK_DEST@19..63
        LINK_DEST_URL@19..63
          TEXT@19..63 "https://www.npmjs.com ..."
      LINK_DEST_END@63..64 ")"
    NEWLINE@64..65 "\n"
  BLANK_LINE@65..66
    BLANK_LINE@65..66 "\n"
  PARAGRAPH@66..117
    CITATION@66..80
      LINK_START@66..67 "["
      CITATION_CONTENT@67..73 "`x@y` "
      CITATION_MARKER@73..74 "@"
      CITATION_KEY@74..79 "doe99"
      LINK_DEST@79..80 "]"
    TEXT@80..85 " and "
    CITATION@85..99
      LINK_START@85..86 "["
      CITATION_CONTENT@86..92 "`a]b` "
      CITATION_MARKER@92..93 "@"
      CITATION_KEY@93..98 "smith"
      LINK_DEST@98..99 "]"
    TEXT@99..104 " and "
    CITATION@104..115
      LINK_START@104..105 "["
      CITATION_CONTENT@105..106 "`"
      CITATION_MARKER@106..107 "@"
      CITATION_KEY@107..110 "foo"
      CITATION_CONTENT@110..114 " bar"
      LINK_DEST@114..115 "]"
    TEXT@115..116 "."
    NEWLINE@116..117 "\n"
  BLANK_LINE@117..118
    BLANK_LINE@117..118 "\n"
  PARAGRAPH@118..160
    LINK@118..159
      LINK_START@118..119
        LINK_START@118..119 "["
      LINK_TEXT@119..134
        TEXT@119..134 "jola@math.ku.dk"
      LINK_TEXT_END@134..135 "]"
      LINK_DEST_START@135..136 "("
      LINK_DEST@136..158
        LINK_DEST_URL@136..158
          TEXT@136..158 "mailto:jola@math.ku.dk"
      LINK_DEST_END@158..159 ")"
    NEWLINE@159..160 "\n"
  BLANK_LINE@160..161
    BLANK_LINE@160..161 "\n"
  PARAGRAPH@161..195
    LINK@161..194
      LINK_START@161..162
        LINK_START@161..162 "["
      LINK_TEXT@162..172
        TEXT@162..166 "see "
        CITATION@166..172
          CITATION_MARKER@166..167 "@"
          CITATION_KEY@167..172 "doe99"
      LINK_TEXT_END@172..173 "]"
      LINK_DEST_START@173..174 "("
      LINK_DEST@174..193
        LINK_DEST_URL@174..193
          TEXT@174..193 "https://example.com"
      LINK_DEST_END@193..194 ")"
    NEWLINE@194..195 "\n"
  BLANK_LINE@195..196
    BLANK_LINE@195..196 "\n"
  PARAGRAPH@196..232
    UNRESOLVED_REFERENCE@196..231
      LINK_START@196..197
        LINK_START@196..197 "["
      LINK_TEXT@197..230
        TEXT@197..224 "email jola@math.ku.dk ..."
        CITATION@224..230
          CITATION_MARKER@224..225 "@"
          CITATION_KEY@225..230 "doe99"
      TEXT@230..231 "]"
    NEWLINE@231..232 "\n"
