crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_commonmark_image_paragraph_no_figure.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..21
  PARAGRAPH@0..21
    IMAGE_LINK@0..20
      IMAGE_LINK_START@0..2
        IMAGE_LINK_START@0..2 "!["
      IMAGE_ALT@2..5
        TEXT@2..5 "foo"
      IMAGE_ALT_END@5..6 "]"
      IMAGE_DEST_START@6..7 "("
      LINK_DEST@7..19
        LINK_DEST_URL@7..11
          TEXT@7..11 "/url"
        TEXT@11..12 " "
        LINK_DEST_TITLE@12..19
          LINK_DEST_TITLE_MARKER@12..13 "\""
          TEXT@13..18 "title"
          LINK_DEST_TITLE_MARKER@18..19 "\""
      IMAGE_DEST_END@19..20 ")"
    NEWLINE@20..21 "\n"
