crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_gfm_image_inside_link_text.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..70
  PARAGRAPH@0..70
    LINK@0..69
      LINK_START@0..1
        LINK_START@0..1 "["
      LINK_TEXT@1..40
        IMAGE_LINK@1..40
          IMAGE_LINK_START@1..3
            IMAGE_LINK_START@1..3 "!["
          IMAGE_ALT@3..8
            TEXT@3..8 "badge"
          IMAGE_ALT_END@8..9 "]"
          IMAGE_DEST_START@9..10 "("
          LINK_DEST@10..39
            LINK_DEST_URL@10..39
              TEXT@10..39 "https://example.com/b ..."
          IMAGE_DEST_END@39..40 ")"
      LINK_TEXT_END@40..41 "]"
      LINK_DEST_START@41..42 "("
      LINK_DEST@42..68
        LINK_DEST_URL@42..68
          TEXT@42..68 "https://example.com/t ..."
      LINK_DEST_END@68..69 ")"
    NEWLINE@69..70 "\n"
