crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_grid_table.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..1852
  GRID_TABLE@0..231
    TABLE_SEPARATOR@0..33
      TABLE_SEP_DELIM@0..1 "+"
      TABLE_SEP_DASHES@1..9 "--------"
      TABLE_SEP_DELIM@9..10 "+"
      TABLE_SEP_DASHES@10..20 "----------"
      TABLE_SEP_DELIM@20..21 "+"
      TABLE_SEP_DASHES@21..31 "----------"
      TABLE_SEP_DELIM@31..32 "+"
      NEWLINE@32..33 "\n"
    TABLE_HEADER@33..66
      TEXT@33..34 "|"
      WHITESPACE@34..35 " "
      TABLE_CELL@35..41
        TEXT@35..41 "Header"
      WHITESPACE@41..42 " "
      TEXT@42..43 "|"
      WHITESPACE@43..44 " "
      TABLE_CELL@44..52
        TEXT@44..52 "Column 2"
      WHITESPACE@52..53 " "
      TEXT@53..54 "|"
      WHITESPACE@54..55 " "
      TABLE_CELL@55..63
        TEXT@55..63 "Column 3"
      WHITESPACE@63..64 " "
      TEXT@64..65 "|"
      NEWLINE@65..66 "\n"
    TABLE_SEPARATOR@66..99
      TABLE_SEP_DELIM@66..67 "+"
      TABLE_SEP_EQUALS@67..75 "========"
      TABLE_SEP_DELIM@75..76 "+"
      TABLE_SEP_EQUALS@76..86 "=========="
      TABLE_SEP_DELIM@86..87 "+"
      TABLE_SEP_EQUALS@87..97 "=========="
      TABLE_SEP_DELIM@97..98 "+"
      NEWLINE@98..99 "\n"
    TABLE_ROW@99..132
      TEXT@99..100 "|"
      WHITESPACE@100..101 " "
      TABLE_CELL@101..102
        TEXT@101..102 "A"
      WHITESPACE@102..108 "      "
      TEXT@108..109 "|"
      WHITESPACE@109..110 " "
      TABLE_CELL@110..111
        TEXT@110..111 "B"
      WHITESPACE@111..119 "        "
      TEXT@119..120 "|"
      WHITESPACE@120..121 " "
      TABLE_CELL@121..122
        TEXT@121..122 "C"
      WHITESPACE@122..130 "        "
      TEXT@130..131 "|"
      NEWLINE@131..132 "\n"
    TABLE_SEPARATOR@132..165
      TABLE_SEP_DELIM@132..133 "+"
      TABLE_SEP_DASHES@133..141 "--------"
      TABLE_SEP_DELIM@141..142 "+"
      TABLE_SEP_DASHES@142..152 "----------"
      TABLE_SEP_DELIM@152..153 "+"
      TABLE_SEP_DASHES@153..163 "----------"
      TABLE_SEP_DELIM@163..164 "+"
      NEWLINE@164..165 "\n"
    TABLE_ROW@165..198
      TEXT@165..166 "|"
      WHITESPACE@166..167 " "
      TABLE_CELL@167..171
        TEXT@167..171 "Data"
      WHITESPACE@171..174 "   "
      TEXT@174..175 "|"
      WHITESPACE@175..176 " "
      TABLE_CELL@176..180
        TEXT@176..180 "More"
      WHITESPACE@180..185 "     "
      TEXT@185..186 "|"
      WHITESPACE@186..187 " "
      TABLE_CELL@187..193
        TEXT@187..193 "Values"
      WHITESPACE@193..196 "   "
      TEXT@196..197 "|"
      NEWLINE@197..198 "\n"
    TABLE_SEPARATOR@198..231
      TABLE_SEP_DELIM@198..199 "+"
      TABLE_SEP_DASHES@199..207 "--------"
      TABLE_SEP_DELIM@207..208 "+"
      TABLE_SEP_DASHES@208..218 "----------"
      TABLE_SEP_DELIM@218..219 "+"
      TABLE_SEP_DASHES@219..229 "----------"
      TABLE_SEP_DELIM@229..230 "+"
      NEWLINE@230..231 "\n"
  BLANK_LINE@231..232
    BLANK_LINE@231..232 "\n"
  PARAGRAPH@232..255
    TEXT@232..254 "Table with alignments:"
    NEWLINE@254..255 "\n"
  BLANK_LINE@255..256
    BLANK_LINE@255..256 "\n"
  GRID_TABLE@256..452
    TABLE_SEPARATOR@256..284
      TABLE_SEP_DELIM@256..257 "+"
      TABLE_SEP_DASHES@257..264 "-------"
      TABLE_SEP_DELIM@264..265 "+"
      TABLE_SEP_DASHES@265..273 "--------"
      TABLE_SEP_DELIM@273..274 "+"
      TABLE_SEP_DASHES@274..282 "--------"
      TABLE_SEP_DELIM@282..283 "+"
      NEWLINE@283..284 "\n"
    TABLE_HEADER@284..312
      TEXT@284..285 "|"
      WHITESPACE@285..286 " "
      TABLE_CELL@286..290
        TEXT@286..290 "Left"
      WHITESPACE@290..292 "  "
      TEXT@292..293 "|"
      WHITESPACE@293..294 " "
      TABLE_CELL@294..299
        TEXT@294..299 "Right"
      WHITESPACE@299..301 "  "
      TEXT@301..302 "|"
      WHITESPACE@302..303 " "
      TABLE_CELL@303..309
        TEXT@303..309 "Center"
      WHITESPACE@309..310 " "
      TEXT@310..311 "|"
      NEWLINE@311..312 "\n"
    TABLE_SEPARATOR@312..340
      TABLE_SEP_DELIM@312..313 "+"
      TABLE_SEP_COLON@313..314 ":"
      TABLE_SEP_EQUALS@314..320 "======"
      TABLE_SEP_DELIM@320..321 "+"
      TABLE_SEP_EQUALS@321..328 "======="
      TABLE_SEP_COLON@328..329 ":"
      TABLE_SEP_DELIM@329..330 "+"
      TABLE_SEP_COLON@330..331 ":"
      TABLE_SEP_EQUALS@331..337 "======"
      TABLE_SEP_COLON@337..338 ":"
      TABLE_SEP_DELIM@338..339 "+"
      NEWLINE@339..340 "\n"
    TABLE_ROW@340..368
      TEXT@340..341 "|"
      WHITESPACE@341..342 " "
      TABLE_CELL@342..343
        TEXT@342..343 "A"
      WHITESPACE@343..348 "     "
      TEXT@348..349 "|"
      WHITESPACE@349..355 "      "
      TABLE_CELL@355..356
        TEXT@355..356 "B"
      WHITESPACE@356..357 " "
      TEXT@357..358 "|"
      WHITESPACE@358..361 "   "
      TABLE_CELL@361..362
        TEXT@361..362 "C"
      WHITESPACE@362..366 "    "
      TEXT@366..367 "|"
      NEWLINE@367..368 "\n"
    TABLE_SEPARATOR@368..396
      TABLE_SEP_DELIM@368..369 "+"
      TABLE_SEP_DASHES@369..376 "-------"
      TABLE_SEP_DELIM@376..377 "+"
      TABLE_SEP_DASHES@377..385 "--------"
      TABLE_SEP_DELIM@385..386 "+"
      TABLE_SEP_DASHES@386..394 "--------"
      TABLE_SEP_DELIM@394..395 "+"
      NEWLINE@395..396 "\n"
    TABLE_ROW@396..424
      TEXT@396..397 "|"
      WHITESPACE@397..398 " "
      TABLE_CELL@398..403
        TEXT@398..403 "Short"
      WHITESPACE@403..404 " "
      TEXT@404..405 "|"
      WHITESPACE@405..406 " "
      TABLE_CELL@406..412
        TEXT@406..412 "Longer"
      WHITESPACE@412..413 " "
      TEXT@413..414 "|"
      WHITESPACE@414..416 "  "
      TABLE_CELL@416..419
        TEXT@416..419 "Mid"
      WHITESPACE@419..422 "   "
      TEXT@422..423 "|"
      NEWLINE@423..424 "\n"
    TABLE_SEPARATOR@424..452
      TABLE_SEP_DELIM@424..425 "+"
      TABLE_SEP_DASHES@425..432 "-------"
      TABLE_SEP_DELIM@432..433 "+"
      TABLE_SEP_DASHES@433..441 "--------"
      TABLE_SEP_DELIM@441..442 "+"
      TABLE_SEP_DASHES@442..450 "--------"
      TABLE_SEP_DELIM@450..451 "+"
      NEWLINE@451..452 "\n"
  BLANK_LINE@452..453
    BLANK_LINE@452..453 "\n"
  PARAGRAPH@453..488
    TEXT@453..465 "With inline "
    EMPHASIS@465..475
      EMPHASIS_MARKER@465..466 "*"
      TEXT@466..474 "emphasis"
      EMPHASIS_MARKER@474..475 "*"
    TEXT@475..480 " and "
    INLINE_CODE@480..486
      INLINE_CODE_MARKER@480..481 "`"
      INLINE_CODE_CONTENT@481..485 "code"
      INLINE_CODE_MARKER@485..486 "`"
    TEXT@486..487 ":"
    NEWLINE@487..488 "\n"
  BLANK_LINE@488..489
    BLANK_LINE@488..489 "\n"
  GRID_TABLE@489..599
    TABLE_SEPARATOR@489..511
      TABLE_SEP_DELIM@489..490 "+"
      TABLE_SEP_DASHES@490..498 "--------"
      TABLE_SEP_DELIM@498..499 "+"
      TABLE_SEP_DASHES@499..509 "----------"
      TABLE_SEP_DELIM@509..510 "+"
      NEWLINE@510..511 "\n"
    TABLE_HEADER@511..533
      TEXT@511..512 "|"
      WHITESPACE@512..513 " "
      TABLE_CELL@513..519
        EMPHASIS@513..519
          EMPHASIS_MARKER@513..514 "*"
          TEXT@514..518 "Bold"
          EMPHASIS_MARKER@518..519 "*"
      WHITESPACE@519..520 " "
      TEXT@520..521 "|"
      WHITESPACE@521..522 " "
      TABLE_CELL@522..530
        INLINE_CODE@522..530
          INLINE_CODE_MARKER@522..523 "`"
          INLINE_CODE_CONTENT@523..529 "inline"
          INLINE_CODE_MARKER@529..530 "`"
      WHITESPACE@530..531 " "
      TEXT@531..532 "|"
      NEWLINE@532..533 "\n"
    TABLE_SEPARATOR@533..555
      TABLE_SEP_DELIM@533..534 "+"
      TABLE_SEP_EQUALS@534..542 "========"
      TABLE_SEP_DELIM@542..543 "+"
      TABLE_SEP_EQUALS@543..553 "=========="
      TABLE_SEP_DELIM@553..554 "+"
      NEWLINE@554..555 "\n"
    TABLE_ROW@555..577
      TEXT@555..556 "|"
      WHITESPACE@556..557 " "
      TABLE_CELL@557..563
        TEXT@557..563 "Normal"
      WHITESPACE@563..564 " "
      TEXT@564..565 "|"
      WHITESPACE@565..566 " "
      TABLE_CELL@566..570
        TEXT@566..570 "text"
      WHITESPACE@570..575 "     "
      TEXT@575..576 "|"
      NEWLINE@576..577 "\n"
    TABLE_SEPARATOR@577..599
      TABLE_SEP_DELIM@577..578 "+"
      TABLE_SEP_DASHES@578..586 "--------"
      TABLE_SEP_DELIM@586..587 "+"
      TABLE_SEP_DASHES@587..597 "----------"
      TABLE_SEP_DELIM@597..598 "+"
      NEWLINE@598..599 "\n"
  BLANK_LINE@599..600
    BLANK_LINE@599..600 "\n"
  PARAGRAPH@600..630
    TEXT@600..629 "With trailing spaces  ..."
    NEWLINE@629..630 "\n"
  BLANK_LINE@630..631
    BLANK_LINE@630..631 "\n"
  GRID_TABLE@631..1852
    TABLE_SEPARATOR@631..805
      TABLE_SEP_DELIM@631..632 "+"
      TABLE_SEP_DASHES@632..658 "--------------------- ..."
      TABLE_SEP_DELIM@658..659 "+"
      TABLE_SEP_DASHES@659..803 "--------------------- ..."
      TABLE_SEP_DELIM@803..804 "+"
      NEWLINE@804..805 "\n"
    TABLE_HEADER@805..979
      TEXT@805..806 "|"
      WHITESPACE@806..807 " "
      TABLE_CELL@807..813
        TEXT@807..813 "Option"
      WHITESPACE@813..832 "                   "
      TEXT@832..833 "|"
      WHITESPACE@833..834 " "
      TABLE_CELL@834..845
        TEXT@834..845 "Description"
      WHITESPACE@845..977 "                      ..."
      TEXT@977..978 "|"
      NEWLINE@978..979 "\n"
    TABLE_SEPARATOR@979..1153
      TABLE_SEP_DELIM@979..980 "+"
      TABLE_SEP_EQUALS@980..1006 "===================== ..."
      TABLE_SEP_DELIM@1006..1007 "+"
      TABLE_SEP_EQUALS@1007..1151 "===================== ..."
      TABLE_SEP_DELIM@1151..1152 "+"
      NEWLINE@1152..1153 "\n"
    TABLE_ROW@1153..1329
      TEXT@1153..1154 "|"
      WHITESPACE@1154..1155 " "
      TABLE_CELL@1155..1162
        INLINE_CODE@1155..1162
          INLINE_CODE_MARKER@1155..1156 "`"
          INLINE_CODE_CONTENT@1156..1161 "width"
          INLINE_CODE_MARKER@1161..1162 "`"
      WHITESPACE@1162..1180 "                  "
      TEXT@1180..1181 "|"
      WHITESPACE@1181..1182 " "
      TABLE_CELL@1182..1218
        TEXT@1182..1210 "Width in CSS units. D ..."
        INLINE_CODE@1210..1217
          INLINE_CODE_MARKER@1210..1211 "`"
          INLINE_CODE_CONTENT@1211..1216 "1.5in"
          INLINE_CODE_MARKER@1216..1217 "`"
        TEXT@1217..1218 "."
      WHITESPACE@1218..1325 "                      ..."
      TEXT@1325..1326 "|"
      WHITESPACE@1326..1328 "  "
      NEWLINE@1328..1329 "\n"
    TABLE_SEPARATOR@1329..1503
      TABLE_SEP_DELIM@1329..1330 "+"
      TABLE_SEP_DASHES@1330..1356 "--------------------- ..."
      TABLE_SEP_DELIM@1356..1357 "+"
      TABLE_SEP_DASHES@1357..1501 "--------------------- ..."
      TABLE_SEP_DELIM@1501..1502 "+"
      NEWLINE@1502..1503 "\n"
    TABLE_ROW@1503..1678
      TEXT@1503..1504 "|"
      WHITESPACE@1504..1505 " "
      TABLE_CELL@1505..1530
        INLINE_CODE@1505..1514
          INLINE_CODE_MARKER@1505..1506 "`"
          INLINE_CODE_CONTENT@1506..1513 "padding"
          INLINE_CODE_MARKER@1513..1514 "`"
        TEXT@1514..1516 ", "
        INLINE_CODE@1516..1529
          INLINE_CODE_MARKER@1516..1517 "`"
          INLINE_CODE_CONTENT@1517..1528 "padding-top"
          INLINE_CODE_MARKER@1528..1529 "`"
        TEXT@1529..1530 ","
      TEXT@1530..1531 "|"
      WHITESPACE@1531..1532 " "
      TABLE_CELL@1532..1675
        TEXT@1532..1593 "Amount of padding to  ..."
        LINK@1593..1662
          LINK_START@1593..1594
            LINK_START@1593..1594 "["
          LINK_TEXT@1594..1603
            INLINE_CODE@1594..1603
              INLINE_CODE_MARKER@1594..1595 "`"
              INLINE_CODE_CONTENT@1595..1602 "padding"
              INLINE_CODE_MARKER@1602..1603 "`"
          LINK_TEXT_END@1603..1604 "]"
          LINK_DEST_START@1604..1605 "("
          LINK_DEST@1605..1661
            LINK_DEST_URL@1605..1661
              TEXT@1605..1661 "https://developer.moz ..."
          LINK_DEST_END@1661..1662 ")"
        TEXT@1662..1675 " conventions."
      TEXT@1675..1676 "|"
      WHITESPACE@1676..1677 " "
      NEWLINE@1677..1678 "\n"
    TABLE_SEPARATOR@1678..1852
      TABLE_SEP_DELIM@1678..1679 "+"
      TABLE_SEP_DASHES@1679..1705 "--------------------- ..."
      TABLE_SEP_DELIM@1705..1706 "+"
      TABLE_SEP_DASHES@1706..1850 "--------------------- ..."
      TABLE_SEP_DELIM@1850..1851 "+"
      NEWLINE@1851..1852 "\n"
